fixed css visibility classname to follow BEM-style

--- a/src/_playground/App.scss
+++ b/src/_playground/App.scss
@@ -96,7 +96,7 @@ $library-color: #61dafb;
         }
 
         @media (max-width: $mediaMaxWidth) {
-            .frDocs-Sidebar.sidebar-visibility {
+            .frDocs-Sidebar__visibility {
                         margin-left: -280px;
                         overflow-x: hidden;
             }
